# mneme

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  PLAN.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
src/mneme/: agents.py  ai.py  answer_formatting.py  artifacts.py  cli.py  consolidation.py  db.py  mcp_server.py  memory.py  retrieval.py  retrieval_eval.py  retrieval_eval_cases.py  schema.sql  thread_merges.py  tools.py  triggered_consolidation.py
tests/: test_artifacts.py  test_capture_hooks.py  test_consolidation.py  test_retrieval.py  test_retrieval_eval.py  test_thread_lifecycle.py  test_triggered_consolidation.py
